# mcp-background-job

./: README.md  TODO.md  pyproject.toml  pytest.ini
src/mcp_background_job/: __main__.py  process.py  server.py  service.py
tests/integration/: test_server_integration.py
tests/unit/: test_models.py  test_process.py  test_server_startup.py  test_service.py
