[project]
name = "mcp-background-job"
version = "0.1.0"
description = "MCP server for executing long-running shell commands asynchronously"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=2.11.1",
    "pydantic>=2.11.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_background_job"]

[dependency-groups]
dev = [
    "mypy>=1.17.1",
    "pytest>=8.4.1",
    "ruff>=0.12.7",
]
